archive/parser/tests/snapshots/statements/valid/0040@5.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE OR REPLACE FUNCTION getfoo(int) RETURNS SETOF users AS $$SELECT * FROM \\\"users\\\" WHERE users.id = $1;$$ LANGUAGE sql IMMUTABLE RETURNS NULL ON NULL INPUT;"
---
Parse {
    cst: SourceFile@0..161
      CreateFunctionStmt@0..161
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Or@7..9 "OR"
        Whitespace@9..10 " "
        Replace@10..17 "REPLACE"
        Whitespace@17..18 " "
        Function@18..26 "FUNCTION"
        Whitespace@26..27 " "
        Ident@27..33 "getfoo"
        Ascii40@33..34 "("
        FunctionParameter@34..37
          TypeName@34..37
            IntP@34..37 "int"
        Ascii41@37..38 ")"
        Whitespace@38..39 " "
        Returns@39..46 "RETURNS"
        Whitespace@46..47 " "
        Setof@47..52 "SETOF"
        Whitespace@52..53 " "
        TypeName@53..58
          Ident@53..58 "users"
        Whitespace@58..59 " "
        DefElem@59..110
          As@59..61 "AS"
          Whitespace@61..62 " "
          List@62..110
            Sconst@62..110 "$$SELECT * FROM \\\"use ..."
        Whitespace@110..111 " "
        DefElem@111..123
          Language@111..119 "LANGUAGE"
          Whitespace@119..120 " "
          SqlP@120..123 "sql"
        Whitespace@123..124 " "
        DefElem@124..133
          Immutable@124..133 "IMMUTABLE"
        Whitespace@133..134 " "
        DefElem@134..141
          Returns@134..141 "RETURNS"
        Whitespace@141..142 " "
        NullP@142..146 "NULL"
        Whitespace@146..147 " "
        On@147..149 "ON"
        Whitespace@149..150 " "
        NullP@150..154 "NULL"
        Whitespace@154..155 " "
        InputP@155..160 "INPUT"
        Ascii59@160..161 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateFunctionStmt(
                CreateFunctionStmt {
                    is_procedure: false,
                    replace: true,
                    funcname: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "getfoo",
                                    },
                                ),
                            ),
                        },
                    ],
                    parameters: [
                        Node {
                            node: Some(
                                FunctionParameter(
                                    FunctionParameter {
                                        name: "",
                                        arg_type: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "pg_catalog",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "int4",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 34,
                                            },
                                        ),
                                        mode: FuncParamDefault,
                                        defexpr: None,
                                    },
                                ),
                            ),
                        },
                    ],
                    return_type: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "users",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: true,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 53,
                        },
                    ),
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "as",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    List(
                                                        List {
                                                            items: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "SELECT * FROM \\\"users\\\" WHERE users.id = $1;",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 59,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "language",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "sql",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 111,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "volatility",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "immutable",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 124,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "strict",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    Boolean(
                                                        Boolean {
                                                            boolval: true,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 134,
                                    },
                                ),
                            ),
                        },
                    ],
                    sql_body: None,
                },
            ),
            range: 0..160,
        },
    ],
}
