archive/parser/tests/snapshots/statements/valid/0046@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "/* TODO: CREATE TYPE type1 AS (attr1 int4 COLLATE collation1, attr2 bool); */ SELECT 1;"
---
Parse {
    cst: SourceFile@0..86
      CComment@0..77 "/* TODO: CREATE TYPE  ..."
      SelectStmt@77..86
        Select@77..83 "SELECT"
        Whitespace@83..84 " "
        ResTarget@84..85
          AConst@84..85
            Iconst@84..85 "1"
        Ascii59@85..86 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    AConst(
                                                        AConst {
                                                            isnull: false,
                                                            location: 7,
                                                            val: Some(
                                                                Ival(
                                                                    Integer {
                                                                        ival: 1,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 77..86,
        },
    ],
}
