archive/parser/tests/snapshots/statements/valid/advisory_lock@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "-- pg_advisory_unlock_all() shouldn't release xact locks\nSELECT pg_advisory_unlock_all();"
---
Parse {
    cst: SourceFile@0..89
      SqlComment@0..56 "-- pg_advisory_unlock ..."
      Newline@56..57 "\n"
      SelectStmt@57..89
        Select@57..63 "SELECT"
        Whitespace@63..64 " "
        ResTarget@64..86
          FuncCall@64..86
            Ident@64..86 "pg_advisory_unlock_all"
        Ascii40@86..87 "("
        Ascii41@87..88 ")"
        Ascii59@88..89 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "pg_advisory_unlock_all",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 7,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 56..88,
        },
    ],
}
